색상 테마 적용 및 출시 release 1.0.0

--- a/core/design-system/src/main/res/values/strings.xml
+++ b/core/design-system/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="description_favorite">즐겨찾기 아이콘</string>
 
 
-    <string name="selected_description">버튼을 눌러 선택</string>
+    <string name="selected_description">아래의 손가락 모양 아이콘을 클릭하여 핑계 생성</string>
 </resources>
 
 
